syntax = "proto3";

package order;
option go_package = "github.com/tanasinp/go-microservices-ecommerce/proto/order;orderproto";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns(CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns(GetOrderResponse);
}

message CreateOrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
    string address = 3;
    double total = 4;
}

message CreateOrderResponse {
    string order_id = 1;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    string order_id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    string address = 4;
    double total = 5;
    string status = 6;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    double price = 3;
}